syntax = "proto3";

package nibiru.inflation.v1;

import "gogoproto/gogo.proto";
import "inflation/v1/inflation.proto";

option go_package = "github.com/NibiruChain/nibiru/x/inflation/types";

// GenesisState defines the inflation module's genesis state.
message GenesisState {
  // params defines all the parameters of the module.
  Params params = 1 [ (gogoproto.nullable) = false ];
  // period is the amount of past periods, based on the epochs per period param
  uint64 period = 2;
  // epoch_identifier for inflation, e.g. "day"
  string epoch_identifier = 3;
  // epochs_per_period is the number of epochs after which inflation is
  // recalculated, e.g. 365
  int64 epochs_per_period = 4;
  // skipped_epochs is the number of epochs that have passed while inflation is
  // disabled
  uint64 skipped_epochs = 5;
}

// Params holds parameters for the inflation module.
message Params {
  // mint_denom specifies the type of coin to mint
  string mint_denom = 1;
  // exponential_calculation takes in the variables to calculate exponential
  // inflation
  ExponentialCalculation exponential_calculation = 2
      [ (gogoproto.nullable) = false ];
  // inflation_distribution of the minted denom
  InflationDistribution inflation_distribution = 3
      [ (gogoproto.nullable) = false ];
  // enable_inflation is the parameter that enables inflation and halts
  // increasing the skipped_epochs
  bool enable_inflation = 4;
}
